<resources>
    <string name="app_name">LCatalog/Mod</string>
    <string name="title_activity_catalog">LCatalog/Mod</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_address">Chandra Layout, Bangalore- 560072</string>
    <string name="note_download">NOTE : Please click the download button before you click the 3d view, as it is already been disabled until you download</string>
    <string name="title_activity_article_3dView">3DView</string>
    <string name="action_settings">Settings</string>
    <string name="activity_product_page">Product Page</string>
    <string name="catalog">Catalog</string>
    <string name="augment">Augment</string>
    <string name="menu_augment">Augment</string>
    <string name="_3d_text">3dview</string>
    <string name="product_title">TITLE :</string>
    <string name="product_title_name">please display the text here............</string>
    <string name="product_desc">DESCRIPTION :</string>
    <string name="product_desc_name">Description of the product will be displayed here and also the related products</string>
    <string name="product_rating">4.3 *</string>
    <string name="product_rating_reviews"><![CDATA[50 ratings & 15 reviews]]></string>
    <string name="disc_percent">20% OFF</string>
    <string name="dimen_width">WIDTH :</string>
    <string name="width_value">30</string>
    <string name="dimen_length">LENGTH :</string>
    <string name="length_value">25</string>
    <string name="dimen_height">HEIGHT :</string>
    <string name="height_value">20</string>
    <string name="providedby_vendor">PROVIDED BY :</string>
    <string name="vendor_title">NAME :</string>
    <string name="vendor_name">CMR</string>
    <string name="vendor_address_title">ADDRESS :</string>
    <string name="percentage_symbol">%</string>
    <string name="dimension_value">in</string>
    <string name="discount_off">OFF</string>
    <string name="discount_price_title">AFTER DISCOUNT PRICE:</string>
    <string name="Rs">\u20B9</string>
    <string name="original_price_title">ORIGINAL PRICE:</string>
    <string name="original_price">1000</string>
    <string name="price_Tag">/-</string>
    <string name="discount_percentage">20</string>
    <string name="discount_price">800</string>
    <string name="catalog_title">My Name</string>
    <string name="catalog_description">My Description</string>
    <string name="discount_title">Discount :</string>
</resources>
