<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    tools:context=".Fragment_ProductDetails">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_5">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/article_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_3"
                android:text="@string/product_title"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/article_title_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_3"
                android:text="@string/product_title_name"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <View
                android:id="@+id/layout_separator2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:background="@color/white" />

            <TextView
                android:id="@+id/article_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_3"
                android:text="@string/product_desc"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/article_description_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_3"
                android:text="@string/product_desc_name"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:id="@+id/layout_separator3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/article_ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:paddingBottom="@dimen/margin_2"
                android:paddingLeft="@dimen/margin_6"
                android:paddingRight="@dimen/margin_6"
                android:paddingTop="@dimen/margin_2"
                android:text="@string/product_rating"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_ratings_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12"
                android:text="@string/product_rating_reviews"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:id="@+id/layout_separator4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/article_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_5"
                    android:text="@string/original_price_title"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_3"
                    android:text="@string/Rs"
                    android:textColor="@color/white" />


                <TextView
                    android:id="@+id/article_price_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/original_price"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/margin_20"
                    android:paddingStart="@dimen/margin_0"
                    android:text="@string/price_Tag"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/black"
                    android:padding="@dimen/margin_5">

                    <TextView
                        android:id="@+id/article_price_discount_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discount_percentage"
                        android:textColor="@color/maroon"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/percentage_symbol"
                        android:textColor="@color/maroon"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discount_off"
                        android:textColor="@color/maroon"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/article_price_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_5"
                    android:text="@string/discount_price_title"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_3"
                    android:text="@string/Rs"
                    android:textColor="@color/white" />


                <TextView
                    android:id="@+id/article_price_value_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discount_price"
                    android:textColor="@color/white"
                    android:textColorHint="@color/jet"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/margin_20"
                    android:paddingStart="@dimen/margin_0"
                    android:text="@string/price_Tag"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/layout_separator5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_3"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="@dimen/margin_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/article_width"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_3"
                    android:text="@string/dimen_width"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/article_width_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_3"
                    android:text="@string/width_value"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_3"
                    android:text="@string/dimension_value"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/margin_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/article_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_3"
                    android:text="@string/dimen_length"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/article_length_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_3"
                    android:text="@string/length_value"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_3"
                    android:text="@string/dimension_value"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/margin_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/article_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_3"
                    android:text="@string/dimen_height"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/article_height_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_3"
                    android:text="@string/height_value"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_3"
                    android:text="@string/dimension_value"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/layout_separator6"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_3"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/margin_250"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/article_vendor_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/margin_5"
                    android:text="@string/providedby_vendor"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/article_vendor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:padding="@dimen/margin_5"
                        android:text="@string/vendor_title"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/article_vendor_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_5"
                        android:text="@string/vendor_name"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/article_vendor_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_3"
                        android:text="@string/vendor_address_title"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/article_vendor_address_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_3"
                        android:text="@string/dummy_address"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/margin_3">

                <ImageView
                    android:id="@+id/article_vendor_logo"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitCenter" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

